--- a/aip.tex
+++ b/aip.tex
@@ -26,6 +26,10 @@ TO DO LIST:
  \item[$\Box$] Put in examples.
  \item[$\Box$] Decide on how to define $\widehat{\witt}$.  (Sprouting graph?)
  \pedro[inline]{I'm trying $\graph$ for the notation, for ``sprouting graph''. Let's see if we like it.}  \daniel[inline]{Can someone explain why the graphs now start at the $0$-th level? }
+ \pedro[inline]{
+    I did that, because I think that's how we were thinking of them in our conversations in Lawrence.
+    For example, we were saying that $\bigcup_{e\ge 1}\graph^e(A,p)$ is finite, because we were thinking of the initial level consisting of all (possibly infinitely many) small pairs as level 0.
+ }
  \item[$\Box$] Fill in/rewrite preliminaries.
  \item[$\Box$] Reorganize and motivate the $\Pi$ and $\Theta$, and their connection, in Sections 5 and 6.
  \item[$\Box$] ``Fractal linear program;'' solve $P$ in ``Sierpinski gasket''
