--- a/aip.tex
+++ b/aip.tex
@@ -29,6 +29,7 @@ TO DO LIST:
  \pedro[inline]{
     I did that, because I think that's how we were thinking of them in our conversations in Lawrence.
     For example, we were saying that $\bigcup_{e\ge 1}\graph^e(A,p)$ is finite, because we were thinking of the initial level consisting of all (possibly infinitely many) small pairs as level 0.
+    I have a slight preference for starting at 0, but wouldn't mind changing it back, if you prefer. 
  }
  \item[$\Box$] Fill in/rewrite preliminaries.
  \item[$\Box$] Reorganize and motivate the $\Pi$ and $\Theta$, and their connection, in Sections 5 and 6.
